commit Google-signIn + NavigationDrawer of home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyDoctor</string>
+    <string name="web_client_id">326788881760-pda4u8h32evbisoffuf640evfio1irtk.apps.googleusercontent.com</string>
 </resources>
